@@ -36,11 +36,11 @@ import org.unix.*;
 
 public class PanamaTime {
     public static void main(String[] args) {
-        try (var session = MemorySession.openConfined()) {
-            var now = session.allocate(C_LONG, System.currentTimeMillis() / 1000);
-            MemorySegment time = tm.allocate(session);
+        try (var arena = Arena.openConfined()) {
+            var now = arena.allocate(C_LONG, System.currentTimeMillis() / 1000);
+            MemorySegment time = tm.allocate(arena);
             localtime_r(now, time);
-            System.err.printf("Time = %d:%d\n", tm.tm_hour$get(time), tm.tm_min$get(time));
+            System.err.printf("Time = %d:%02d\n", tm.tm_hour$get(time), tm.tm_min$get(time));
         }
     }
 }
